# istratde-interface

./: .gitignore  PORTABLE_RUNTIME.md  README.md  check_portable_env.bat  check_portable_env.py  compare_results.py  requirements.txt  run_compare_f15.bat  run_test_istratde.bat  test.py
MMES/: es.py  istratde_optimizer.py  mmes.py  optimizer.py
cec2013lsgo/: benchmarks.py  cec2013.py  f1.py  f10.py  f11.py  f12.py  f13.py  f14.py  f15.py  f2.py  f3.py  f4.py  f5.py  f6.py  f7.py  f8.py  f9.py
docs/plans/: 2026-03-20-istratde-adapter-design.md
istratde-main/: README.md  pyproject.toml  show_env.py
istratde-main/examples/jax/: example.py  example_brax.py  example_cec2022.py
istratde-main/examples/pytorch/: example.py  example_brax.py  example_cec2022.py
istratde-main/src/istratde/algorithms/: __init__.py
istratde-main/src/istratde/algorithms/jax/: __init__.py  cmaes.py  de.py  istratde.py
istratde-main/src/istratde/algorithms/pytorch/: __init__.py  istratde.py
istratde-main/src/istratde/problems/: __init__.py
istratde-main/src/istratde/problems/jax/: __init__.py  ackley.py  brax.py  cec2022.py  sphere.py
istratde-main/src/istratde/problems/torch/: __init__.py  cec2022.py
istratde-main/src/istratde/util/: __init__.py  common.py  differential_evolution.py  find_pbest.py  standard.py
istratde-main/src/istratde/util/core/: common.py  distributed.py  module.py  monitor.py  pytree_dataclass.py  state.py
istratde-main/src/istratde/util/operators/: selection.py
